finished lyrics and quotes

--- a/movie-quotes/style.css
+++ b/movie-quotes/style.css
@@ -1,5 +1,5 @@
 #body{
-    font-family: avenir;
+    font-family: avenir, sans-serif;
     font-size: 15pt;
     font-weight: lighter;
     background-color: #f4e1f0;
