--- a/type-styles/style.css
+++ b/type-styles/style.css
@@ -6,6 +6,7 @@
 body{
     margin: 0;
     font-family: "Raleway", sans-serif;
+    background-color: lavender;
 }
 
 body, h1, h2, h3, h4, h5, h6, p, div{
