fixed complex selectors

--- a/complex-selectors-challenge/css/styles.css
+++ b/complex-selectors-challenge/css/styles.css
@@ -20,7 +20,7 @@ h2{
     font-size: 1rem;
 }
 
-h1, h2{
+h1{
     font-weight:100;
 }
 
@@ -53,11 +53,11 @@ img{
     font-style:italic;
 }
 
-.seasons li:last-child::after {
+#game-of-thrones .seasons li:last-child::after {
     content: "*";
 }
 
-.seasons::after {
+#game-of-thrones .seasons::after {
     content: "* Final Season";
     font-size: 0.7rem;
     color: #999;
