--- a/multi-panel-page/styles.css
+++ b/multi-panel-page/styles.css
@@ -1,4 +1,3 @@
-/* font-family: 'Archivo Narrow', sans-serif; */
 
 body{
     margin: 0;
@@ -9,10 +8,6 @@ body{
     margin: 0px 240px;
     padding: 40px 0;
 }
-
-/* #headerSection .content{
-    margin: 0;
-} */
 
 h1, h2, h3, h4 {
     margin: 0;
@@ -114,7 +109,7 @@ li img{
 
 #footer{
     font-size: 20px;
-    /* background-color:thistle; */
+    background-color:thistle;
 }
 
 #footer .content{
