--- a/exercises/responsive-design-techniques/styles.css
+++ b/exercises/responsive-design-techniques/styles.css
@@ -5,6 +5,12 @@ body{
     margin-right: auto;
 }
 
+@media (min-width:680px){
+    html{
+        background-color: #eaf6ff;
+    }
+}
+
 @media (max-width: 500px) {
     h1{
         font-size: 1.5rem;
@@ -47,13 +53,18 @@ ul{
 }
 
 @media (min-width:480px){
-    #stretchable-grid-items ul{
-        margin:1rem -10% ;
+    #stretchable-grid-items li{
+        width: 50%;
     }
+    
 }
 
 @media (min-width:640px){
     #stretchable-grid-items li{
         width:25%;
     }
+}
+
+#stretchable-grid-items ul{
+    margin:1rem -10px;
 }
