--- a/recipe/complete/styles.css
+++ b/recipe/complete/styles.css
@@ -230,6 +230,7 @@ ol li{
     #main {
         align-items: center;
         flex-direction: column;
+        margin-top: 2em;
     }
 
     #ingredients{
