--- a/buttons/styles.css
+++ b/buttons/styles.css
@@ -1,14 +1,27 @@
 :root {
     --coke: #e61d2b;
     --appleGrey: #d6d6d6;
+    --lyft: rgb(255, 0, 191);
+    --gardenDarkGrn: #1c3b04;
+    --gardenOrange: #eb7312;
+    --gardenLightGrn: #365a0d;
+    --mollyDarkGrn:#3c431a;
+    --mollyLightGrn:rgb(168, 164, 118);
+    --electraBlue: rgb(6 168 203);
+    --instagramGray: #8e8e8e;
 }
 
 
 body {
     color: #333;
-    font-family: 'Open Sans', sans-serif;
+    font-family: "cn-bold",'Open Sans', sans-serif;
     margin: 0;
     padding: 0;
+    /* font-size: 30px; */
+}
+
+a{
+    text-decoration: none;
 }
 
 main {
@@ -192,13 +205,13 @@ a#btn_coca-cola:hover .cls-1{
 }
 
 /* apple */
-a#btn_apple, a#btn_hasbro{
+a#btn_apple, a#btn_hasbro, a#btn_instagram{
     position: relative;
     width:50%;
     height:50%;
 }
 
-a#btn_apple > *,a#btn_hasbro > *{
+a#btn_apple > *,a#btn_hasbro > *,  a#btn_instagram > *{
     position: absolute;
     transform: translate(-50%, -50%);
     top: 50%;
@@ -251,7 +264,7 @@ a#btn_hasbro > * {
     left:10%;
     top:80%;
     transition: all .1s;
-    animation-timing-function: ease-in;
+    transition-timing-function: ease-in;
 }
 a#btn_hasbro #woosh{
     transition: all .02s;
@@ -271,20 +284,242 @@ a#btn_hasbro:hover #nerfLogo{
 
 /* michael */
 
-#btn_michaelkors .st0 {
-    stroke: none !important;
+#btn_michaelkors path {
+    /* stroke: none !important; */
     transition: all 1s;
 }
 
 #btn_michaelkors:hover{
     transform: rotate(360deg);
     animation-direction: alternate-reverse;
-
 }
 
-#btn_michaelkors:hover svg .st0{
-    fill:#ad8917 !important;
+#btn_michaelkors:hover svg path{
+    fill:#ad8917;
 }
 #btn_michaelkors {
     transition: all 1s;
+}
+
+/* ideo */ 
+#btn_ideo #ideoLogoText{
+    margin-top: 5%;
+}
+
+#btn_ideo path {
+    transition: all .5s;
+}
+
+#btn_ideo #intersect{
+    /* transition: all .01s; */
+    opacity: 0;
+    animation: .1s forwards;
+}
+
+/* transition */
+#btn_ideo:hover #intersect{
+    animation-name: ideo;
+    animation-delay: 400ms;
+    /* opacity: 100%; */
+    /* d: path("M 67.9 28.4 c 10.5 0 20.1 4.1 27.2 10.8 c 7 -6.3 16.3 -10.2 26.4 -10.2 c 0.7 0 1.4 0 2.2 0.1 C 116.6 19 106.9 10.9 95.5 5.9 C 84 10.7 74.1 18.5 66.8 28.5 C 67.1 28.4 67.5 28.4 67.9 28.4 Z"); */
+}
+
+@keyframes ideo {
+    0%   { opacity: 0%; }
+    100% {     
+        opacity: 100%;
+    }
+  }
+
+#btn_ideo:hover #orange{
+    d: path("M 82 67.3 c 0.7 -21.2 18.1 -38.2 39.4 -38.2 s 38.8 17.1 39.4 38.2 h 28.4 c -0.6 -36.8 -30.8 -66.7 -67.8 -66.7 S 54.2 30.5 53.5 67.3 H 82 Z");
+}
+
+#btn_ideo:hover #blue{
+    d: path("M 28.4 67.3 c 0.3 -21.5 17.9 -38.9 39.5 -38.9 c 21.5 0 39.1 17.4 39.4 38.9 h 28.4 C 135.4 30.2 105.1 0 67.9 0 C 30.7 0 0.3 30.2 0 67.3 H 28.4 Z");
+}
+
+
+/* lyft */
+
+a#btn_lyft {
+    display: block;
+    position: relative;
+    color: var(--lyft);
+    text-align: left;
+    font-size: 30px;
+    height:70px;
+    padding:0;
+}
+
+a#btn_lyft > *{
+    position: absolute;
+    transform: translate(0%, -50%);
+    top: 50%;
+    left: 0%;
+    width: initial;
+}
+
+a#btn_lyft i{
+    transition: all .2s;
+    background-color: white;
+    width: 100%;
+    line-height: 70px;
+}
+
+a#btn_lyft svg{
+    height: 100%;
+}
+
+a#btn_lyft path{
+    fill: var(--lyft);
+}
+
+a#btn_lyft:hover i {
+    transform:translate(calc(100% - 40px),-50%);
+}
+
+/* cartoon network */
+
+a#btn_cartoonnetwork g{
+    transition: all .1s;
+    transition-timing-function: cubic-bezier(0.65, 0.05, 0.36, 1);
+}
+
+a#btn_cartoonnetwork:hover g#c{
+    transform: rotate(-10deg) translate(-14px, 65px) skew(9deg, -1deg) scale(.85);
+}
+
+a#btn_cartoonnetwork:hover g#n{
+    transform: rotate(-14deg) translate(92px, -26px) skew(-21deg, 25deg) scale(.85)
+}
+
+/* missouri botanical garden */
+a#btn_missouribotanicalgarden{
+    font-family: Georgia, BemboStdRegular, Serif;
+    font-size: 20pt;
+    line-height: 1.4em;
+    color: var(--gardenLightGrn);
+    width: 50%;
+    height: 100%;
+    border-radius: 0 0 15px 15px;
+    transition: all .1s;
+    transition: background-color .05s;
+    display: flex;
+    transform: translate(0, -10%);
+    transition-timing-function: cubic-bezier(0.31, 0.32, 0.37, 0.99);
+}
+
+a#btn_missouribotanicalgarden span{
+    transform: translate(0, 70%);
+}
+
+a#btn_missouribotanicalgarden:hover span{
+    transform: translate(0, 75%);
+}
+
+a#btn_missouribotanicalgarden:hover{
+    color:var(--gardenOrange);
+    background-color: var(--gardenDarkGrn);
+    font-size: 18pt;
+}
+
+/* moo */
+
+a#btn_moo{
+    transition: all .1s;
+    /* background-color: green; */
+}
+
+a#btn_moo:hover{
+    box-shadow:         2px 3px 5px 0px rgba(50, 50, 50, 0.73);
+    transform:translate(-2px, -3px);
+}
+
+/* mollyjogger */
+
+a#btn_mollyjogger{
+    font-size: 30px;
+    text-transform: uppercase;
+    padding:8px;
+    width:unset;
+    color: var(--mollyLightGrn);
+}
+
+a#btn_mollyjogger:hover{
+    color: var(--mollyDarkGrn);
+    border: 2px solid var(--mollyDarkGrn);
+}
+
+/* electra */
+
+a#btn_electrabike{
+    background-color: var(--electraBlue);
+    transition: all .1s;
+}
+
+a#btn_electrabike:hover{
+    transform: scale(80%);
+}
+
+/* instagram */
+
+a#btn_instagram svg{
+    transition: all .5s;
+    transition-timing-function: cubic-bezier(0, 0.23, 0.82, 1.04);
+}
+
+a#btn_instagram #instaRainbow{
+    opacity: 0;
+}
+
+a#btn_instagram #instaGrey path{
+    background-color: var(--instagramGray) !important;
+}
+
+a#btn_instagram:hover #instaGrey{
+    opacity: 0;
+}
+
+a#btn_instagram:hover #instaRainbow{
+    opacity: 100%;
+}
+
+/* new yorker */
+
+a#btn_newyorker {
+    padding: 0;
+    width:80%;
+    /* transform:translate(2px, -2px); */
+    background: linear-gradient( rgba(255, 255, 255, 0.685), rgba(255, 255, 255, 0.685) ),    url("https://media.newyorker.com/photos/601d7678c3db14894df84671/master/w_2560%2Cc_limit/Garcia_Sanchez_Tilley_Vaccine_STORY.jpg");
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: -260px -66px;
+    transition: all .2s;
+    transition-timing-function: cubic-bezier(0.75, -0.01, 0.21, 1.07);
+}
+
+a#btn_newyorker:hover {
+    background-position: -6px -66px;
+    
+}
+
+a#btn_newyorker img{
+    width: 84%;
+    transform: translate(3%, 43%);
+}
+
+/* tucker allen */
+
+a#btn_tuckerallen {
+    font-size: 30pt;
+    color:white;
+    transition: all 1s;
+}
+
+a#btn_tuckerallen:hover span{
+    background: linear-gradient(90deg, rgba(127,168,70,1) 0%, rgba(222,101,70,1) 71%, rgba(204,168,77,1) 100%);
+
 }
